--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@clusterlean/clusterlean-sdk-js",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "scripts": {
     "start": "node build/src/entrypoints/server",
     "build": "tsc --rootDir src --declaration && node esbuild.config.js",
@@ -59,5 +59,7 @@
   },
   "license": "MIT",
   "description": "Clusterlean App SDK for JavaScript",
-  "files": ["build"]
+  "files": [
+    "build"
+  ]
 }
