--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@clusterlean/clusterlean-sdk-js",
   "version": "0.1.2",
+  "main": "lib/index.js",
   "scripts": {
-    "start": "node build/src/entrypoints/server",
-    "build": "tsc --rootDir src --declaration && node esbuild.config.js",
+    "build": "tsc --rootDir src --declaration",
     "lint": "eslint '{src,test}/**/*.{ts,js,jsx,tsx}'",
     "test": "mocha",
     "test:watch": "npm run test -- --watch --watch-files src,test",
@@ -12,39 +12,24 @@
     "fmt:check": "npm run fmt:base -- --check"
   },
   "dependencies": {
-    "@fastify/static": "^6.10.2",
-    "fastify": "^4.19.2",
     "ioredis": "^5.3.2",
-    "mysql": "^2.18.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.0.0",
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/mysql": "^2.15.21",
-    "@types/node": "^20.3.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "@types/redis": "^4.0.11",
+    "@types/chai": "^4.3.9",
+    "@types/mocha": "^10.0.3",
+    "@types/mysql": "^2.15.23",
+    "@types/node": "^20.8.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "chai": "^4.3.7",
+    "chai": "^4.3.10",
     "dotenv": "^16.3.1",
-    "esbuild": "^0.18.13",
-    "eslint": "^8.45.0",
-    "eslint-config-next": "^13.4.10",
+    "eslint": "^8.51.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-mocha": "^10.1.0",
-    "jsdom-global": "^3.0.2",
-    "license-checker": "^25.0.1",
+    "eslint-plugin-mocha": "^10.2.0",
     "mocha": "^10.2.0",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typescript": "~5.0"
-  },
-  "directories": {
-    "test": "test"
   },
   "author": {
     "name": "Clusterlean AB",
@@ -60,6 +45,6 @@
   "license": "MIT",
   "description": "Clusterlean App SDK for JavaScript",
   "files": [
-    "build"
+    "lib"
   ]
 }
