--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,8 +17,10 @@ jobs:
           node-version: 18
           registry-url: 'https://npm.pkg.github.com'
       - run: npm ci
-      - run: npm run build
+      - run: npm run fmt:check
+      - run: npm run lint
       - run: npm run test
+      - run: npm run build
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
