--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,5 +16,7 @@ jobs:
           node-version: 18
           registry-url: 'https://npm.pkg.github.com'
       - run: npm ci
-      - run: npm run build
+      - run: npm run fmt:check
+      - run: npm run lint
       - run: npm run test
+      - run: npm run build
