--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "build": "tsc --rootDir src --declaration",
     "lint": "eslint '{src,test}/**/*.{ts,js,jsx,tsx}'",
-    "test": "mocha",
+    "test": "mocha --require ts-node/register",
     "test:watch": "npm run test -- --watch --watch-files src,test",
-    "fmt:base": "prettier 'src/**/*.{ts,js,jsx,tsx}'",
+    "fmt:base": "prettier '{src,test}/**/*.{ts,js,jsx,tsx}'",
     "fmt": "npm run fmt:base -- --write",
     "fmt:check": "npm run fmt:base -- --check"
   },
@@ -25,6 +25,7 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.51.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-mocha": "^10.2.0",
     "mocha": "^10.2.0",
     "prettier": "^2.8.8",
