--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,6 +1,7 @@
 name: Push
 on:
   push:
+    branches:
 
 env:
   REGISTRY: ghcr.io
@@ -61,37 +62,3 @@ jobs:
             node_modules.tar.gz
           retention-days: 1
       - run: ./clapp deinit -v
-
-  # Push job is separated due to higher permissions
-  push:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
-      - name: Extract build job artifcat
-        run: |
-          tar -xzvf artifact/lib.tar.gz
-          tar -xzvf artifact/node_modules.tar.gz
-      - uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v2
-      - id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository }}
-      - uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
