--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,6 +21,12 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: robinraju/release-downloader@v1.8
+        with:
+          repository: "clusterlean/clapp"
+          latest: true
+          fileName: "clapp"
+          token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
       - name: Clapp init
         env:
           DOCKER_NETWORK_NAME: ${{ job.container.network }}
