--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsc --rootDir src --declaration",
     "build:watch": "npm run build -- --watch",
     "lint": "eslint '{src,test}/**/*.{ts,js,jsx,tsx}'",
-    "test": "mocha --require ts-node/register",
+    "test": "mocha --require ts-node/register 'test/**/*.spec.{ts,js,jsx,tsx}'",
     "test:watch": "npm run test -- --watch --watch-files src,test",
     "fmt:base": "prettier '{src,test}/**/*.{ts,js,jsx,tsx}'",
     "fmt": "npm run fmt:base -- --write",
@@ -24,14 +24,14 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "chai": "^4.3.10",
     "dotenv": "^16.3.1",
-    "eslint": "^8.51.0",
+    "eslint": "^8.52.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-mocha": "^10.2.0",
     "mocha": "^10.2.0",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
-    "typescript": "~5.0"
+    "typescript": "~5.1"
   },
   "author": {
     "name": "Clusterlean AB",
