--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,6 +4,13 @@ on:
   push:
     tags:
       - 'v*'
+
+env:
+  DB_SHARD_1_INTERNAL_HOST: clapp-db-shard-1
+  DB_SHARD_1_INTERNAL_PORT: 3306
+  DB_SHARD_2_INTERNAL_HOST: clapp-db-shard-2
+  DB_SHARD_2_INTERNAL_PORT: 3306
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,6 +38,7 @@ jobs:
         env:
           DOCKER_NETWORK_NAME: ${{ job.container.network }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REDIS_NATMAP_DISABLED: true
         run: |
           docker pull mysql:8.0.33
           docker pull redis:7.0.11
@@ -46,3 +54,4 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: ./clapp deinit -v
