--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,15 +14,13 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/clusterlean/ark:main
     permissions:
       contents: read
       packages: write
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          registry-url: 'https://npm.pkg.github.com'
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -34,11 +32,13 @@ jobs:
           latest: true
           fileName: "clapp"
           token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          registry-url: 'https://npm.pkg.github.com'
       - name: Clapp init
         env:
           DOCKER_NETWORK_NAME: ${{ job.container.network }}
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REDIS_NATMAP_DISABLED: true
         run: |
           docker pull mysql:8.0.33
           docker pull redis:7.0.11
@@ -46,11 +46,16 @@ jobs:
           chmod +x ./clapp
           ./clapp init
           docker ps
-      - run: npm ci
-      - run: npm run fmt:check
-      - run: npm run lint
-      - run: npm run build
-      - run: npm run test
+      - name: Build and Test
+        env:
+          REDIS_NATMAP_DISABLED: true
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          npm ci
+          npm run fmt:check
+          npm run lint
+          npm run build
+          npm run test
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
