--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,21 @@
 {
-  "parser": "@typescript-eslint/parser",
   "env": {
     "es6": true,
     "node": true,
     "commonjs": true,
     "mocha": true
   },
-  "ignorePatterns": ["node_modules", "dist", "build", "coverage"],
+  "ignorePatterns": ["node_modules", "coverage"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": "./tsconfig.eslint.json"
+    "project": "./jsconfig.json"
   },
   "plugins": ["import", "mocha", "eslint-comments"],
   "extends": [
     "eslint:recommended",
     "plugin:eslint-comments/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:mocha/recommended",
-    "plugin:import/typescript"
+    "plugin:mocha/recommended"
   ],
   "globals": { "console": true },
   "rules": {
