--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "@clusterlean/clusterlean-sdk-js",
   "version": "0.3.4",
   "main": "lib/index.js",
+  "type": "module",
   "scripts": {
-    "build": "tsc --rootDir src --declaration",
-    "build:watch": "npm run build -- --watch",
-    "lint": "eslint '{src,test}/**/*.{ts,js,jsx,tsx}'",
-    "test": "mocha --require ts-node/register 'test/**/*.spec.{ts,js,jsx,tsx}'",
+    "lint": "eslint '{src,test}/**/*.{js,jsx}'",
+    "test": "mocha 'test/**/*.spec.{js,jsx}'",
     "test:watch": "npm run test -- --watch --watch-files src,test",
-    "fmt:base": "prettier '{src,test}/**/*.{ts,js,jsx,tsx}'",
+    "fmt:base": "prettier '{src,test}/**/*.{js,jsx}'",
     "fmt": "npm run fmt:base -- --write",
     "fmt:check": "npm run fmt:base -- --check"
   },
@@ -21,7 +20,6 @@
     "@types/mocha": "^10.0.3",
     "@types/mysql": "^2.15.23",
     "@types/node": "^20.8.7",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "chai": "^4.3.10",
     "dotenv": "^16.3.1",
     "eslint": "^8.52.0",
@@ -29,9 +27,7 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-mocha": "^10.2.0",
     "mocha": "^10.2.0",
-    "prettier": "^2.8.8",
-    "ts-node": "^10.9.1",
-    "typescript": "~5.1"
+    "prettier": "^2.8.8"
   },
   "author": {
     "name": "Clusterlean AB",
@@ -49,8 +45,6 @@
   "files": [
     "lib"
   ],
-  "types": "lib/index.d.ts",
-  "typings": "lib/index.d.ts",
   "keywords": [
     "api",
     "clusterlean",
