--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,8 +8,7 @@
   "ignorePatterns": ["node_modules", "coverage"],
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module",
-    "project": "./jsconfig.json"
+    "sourceType": "module"
   },
   "plugins": ["import", "mocha", "eslint-comments"],
   "extends": [
@@ -19,7 +18,6 @@
   ],
   "globals": { "console": true },
   "rules": {
-    "@typescript-eslint/explicit-module-boundary-types": "off",
     "eslint-comments/disable-enable-pair": [
       "error",
       { "allowWholeFile": true }
