--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,10 +3,12 @@
     "baseUrl": ".",
     "moduleResolution": "nodenext",
     "checkJs": true,
-    "target": "ES6",
-    "module": "ES6",
+    "explainFiles": false,
+    "target": "esnext",
+    "module": "nodenext",
     "strictNullChecks": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noEmit": true
   },
   "exclude": ["node_modules"]
 }
