--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -54,6 +54,7 @@ jobs:
           npm ci
           npm run fmt:check
           npm run lint
+          npm run build
           npm run test
       - run: npm publish
         env:
