--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@clusterlean/clusterlean-sdk-js",
   "version": "0.3.5",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
   "type": "module",
+  "types": "./types/index.d.ts",
   "scripts": {
-    "lint": "eslint --max-warnings=0 '{src,test}/**/*.{js,jsx}' && tsc -p ./jsconfig.json",
+    "build": "tsc --declaration --emitDeclarationOnly --outDir types --allowJs --declarationMap lib/index.js",
+    "lint": "eslint --max-warnings=0 '{src,test}/**/*.{js,jsx}' && tsc --noEmit -p ./tsconfig.json",
     "test": "mocha 'test/**/*.spec.{js,jsx}'",
     "test:watch": "npm run test -- --watch --watch-files src,test",
     "fmt:base": "prettier '{src,test}/**/*.{js,jsx}'",
@@ -43,14 +45,6 @@
   },
   "license": "MIT",
   "description": "Clusterlean App SDK for JavaScript",
-  "files": [
-    "lib"
-  ],
-  "keywords": [
-    "api",
-    "clusterlean",
-    "db",
-    "memory",
-    "sql"
-  ]
+  "files": ["lib", "types"],
+  "keywords": ["api", "clusterlean", "db", "memory", "sql"]
 }
