--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-mocha": "^10.2.0",
+    "eslint-plugin-unicorn": "^49.0.0",
     "mocha": "^10.2.0",
     "prettier": "^2.8.8",
     "typescript": "^5.2.2"
