--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@clusterlean/clusterlean-sdk-js",
   "version": "0.3.5",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
   "type": "module",
+  "types": "./types/index.d.ts",
   "scripts": {
-    "lint": "eslint --max-warnings=0 '{src,test}/**/*.{js,jsx}' && tsc -p ./jsconfig.json",
+    "build": "tsc --declaration --emitDeclarationOnly --outDir types --allowJs --declarationMap lib/index.js",
+    "lint": "eslint --max-warnings=0 '{lib,test}/**/*.{js,jsx}' && tsc --noEmit",
+    "lint:fix": "eslint --fix --max-warnings=0 '{lib,test}/**/*.{js,jsx}' && tsc --noEmit",
     "test": "mocha 'test/**/*.spec.{js,jsx}'",
     "test:watch": "npm run test -- --watch --watch-files src,test",
     "fmt:base": "prettier '{src,test}/**/*.{js,jsx}'",
@@ -25,7 +28,9 @@
     "eslint": "^8.52.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-mocha": "^10.2.0",
+    "eslint-plugin-unicorn": "^49.0.0",
     "mocha": "^10.2.0",
     "prettier": "^2.8.8",
     "typescript": "^5.2.2"
@@ -44,7 +49,8 @@
   "license": "MIT",
   "description": "Clusterlean App SDK for JavaScript",
   "files": [
-    "lib"
+    "lib",
+    "types"
   ],
   "keywords": [
     "api",
