--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,12 +3,12 @@ on:
   push:
     branches:
 
-env:
-  REGISTRY: ghcr.io
-  DB_SHARD_1_INTERNAL_HOST: zygote-db-shard-1
-  DB_SHARD_1_INTERNAL_PORT: 3306
-  DB_SHARD_2_INTERNAL_HOST: zygote-db-shard-2
-  DB_SHARD_2_INTERNAL_PORT: 3306
+# env:
+  # REGISTRY: ghcr.io
+  # DB_SHARD_1_INTERNAL_HOST: zygote-db-shard-1
+  # DB_SHARD_1_INTERNAL_PORT: 3306
+  # DB_SHARD_2_INTERNAL_HOST: zygote-db-shard-2
+  # DB_SHARD_2_INTERNAL_PORT: 3306
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,41 +16,40 @@ jobs:
       image: ghcr.io/evgnomon/ark:main
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: robinraju/release-downloader@v1.8
-        with:
-          repository: "evgnomon/zygote"
-          latest: true
-          fileName: "zygote"
-          token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          registry-url: 'https://npm.pkg.github.com'
-      - name: Zygote init
-        env:
-          DOCKER_NETWORK_NAME: ${{ job.container.network }}
-        run: |
-          docker pull mysql:8.0.33
-          docker pull redis:7.0.11
-          docker pull ghcr.io/evgnomon/ark:main
-          chmod +x ./zygote
-          ./zygote init
-          docker ps
+      - uses: actions/checkout@v4
+      # - uses: docker/login-action@v2
+      #   with:
+      #     registry: ghcr.io
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
+      # - uses: robinraju/release-downloader@v1.8
+      #   with:
+      #     repository: "evgnomon/zygote"
+      #     latest: true
+      #     fileName: "zygote"
+      #     token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+      # - uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 18
+      #     registry-url: 'https://npm.pkg.github.com'
+      # - name: Zygote init
+      #   env:
+      #     DOCKER_NETWORK_NAME: ${{ job.container.network }}
+        # run: |
+        #   docker pull mysql:8.0.33
+        #   docker pull redis:7.0.11
+        #   docker pull ghcr.io/evgnomon/ark:main
+        #   chmod +x ./zygote
+        #   ./zygote init
+        #   docker ps
       - name: Build and Test
-        env:
-          REDIS_NATMAP_DISABLED: true
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # env:
+        #   REDIS_NATMAP_DISABLED: true
+        #   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npm ci
           npm run fmt:check
           npm run lint
           npm run build
-          npm run test
           ./zygote migrate down
-      - run: ./zygote deinit -v
+      # - run: ./zygote deinit -v
